--- a/css/style.css
+++ b/css/style.css
@@ -1,58 +1,58 @@
 body {
-	margin: auto;
-	font-size: 20px;
-	line-height: 1.5;
-	font-family: Oswald, Helvetica, Arial, sans-serif;
+  /* Set margin to 0 pixels on all sides */
+  /* Change font size to be 20 pixels */
+  /* Change the line height to be 1.5 times larger than normal */
+  /* Change the font family to use the Google font */
 }
 
 header {
-	text-align: center;
+  /* Align text to center */
 }
 
 main {
-	max-width: 800px;
-	margin: auto;
-  padding: 0px 20px;
+  /* Set maximum width to be 800 pixels */
+  /* Set margins to be automatically calculated on all sides */
+  /* Set padding to be 0 pixels top & bottom, and 20 pixels left & right */
 }
 
 img {
-	max-width: 100%;
+  /* Set max width to be 100% of the containing element */
 }
 
 h1 {
-	border-bottom: 5px solid black;
+  /* Set the border along bottom to be 5 pixel high black solid line */
 }
 
 h2 {
-	color: #FF0000;
+  /* Set font color to be red (try using a hex or rgb code!) */
 }
 
 footer {
-	color: white;
-	background-color: black;
-	padding: 20px;
-	text-align: center;
-  margin-top: 60px;
+  /* Set font color to white */
+  /* Set background color to black */
+  /* Set padding on all sides to be 20 pixels */
+  /* Align text to center */
+  /* Set top margin to be 60 pixels */
 }
 
 .highlight {
-	background-color: #FF0000;
-	color: white;
-	padding: 4px;
+  /* Set background color to red */
+  /* Set font color to white */
+  /* Set padding on all sides to be 4 pixels */
 }
 
 .mobile-only {
-  display: none;
+  /* Set this to NOT display by default */
 }
 
 @media (max-width: 600px) {
 
   body {
-    font-size: 80%;
+    /* Set font size to be 80% of the normal size */
   }
 
   .mobile-only {
-    display: block;
+    /* Set display to block */
   }
 
 }
