Add css class instructions

--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,10 @@ p {
   /* Set font color to be the hex code 666666 */
 }
 
+.faded {
+  /* Set opacity of the text to be 0.7 */
+}
+
 img {
   /* Set max width to be 100% of the containing element */
 }
