--- a/css/style.css
+++ b/css/style.css
@@ -1,56 +1,55 @@
 body {
-  /* Set margin to 0 pixels on all sides */
+  /* Set the background color to "lightgrey" */
   /* Set font family to be Helvetica or Arial */
   /* Set line height to be 1.5 times larger than default */  
 }
 
-header {
-  /* Set text alignment to center */
-}
-
-main {
-  /* Set maximum width to be 800 pixels */
-  /* Set margin to be automatically calculated on all sides */
-  /* Set padding to be 0 pixels top & bottom, and 20 pixels left & right */
-}
-
-p {
-  /* Set font color to be the hex code 666666 */
-}
-
-.faded {
-  /* Set opacity of the text to be 0.7 */
-}
-
-img {
-  /* Set max width to be 100% of the containing element */
-}
-
 h1 {
-  /* Set border along bottom to be a black solid line 5 pixels thick */
+  /* Set a border along the bottom to be a black solid line, 5 pixels thick */
 }
 
 h2 {
-  /* Set font color to be purple (BONUS: try using a hex or rgb code!) */
+  /* Set the font color to be a dark grey, try using a hex (666666) or rgb code! */
+}
+
+p {
+  /* Set font color to be the hex code 333333 */
+}
+
+.faded {
+  /* Set opacity of the text to be 0.7 (70%) */
+}
+
+img {
+  /* Set the max width to be 100% of the containing element */
+}
+
+article {
+  /* Set padding to be 0 pixels top & bottom, and 20 pixels left & right */
 }
 
 footer {
   /* Set font color to white */
   /* Set background color to black */
-  /* Set padding on all sides to be 20 pixels */
   /* Set text alignment to center */
   /* Set margin on top to be 60 pixels */
 }
 
-@media (max-width: 600px) {
+
+@media (max-width: 700px) {
 
   body {
-    /* Set the background color to be purple */
+    /* Set the background color to be a dark grey */
     /* Set the font color to be white */
   }
 
   /* Question - did the font color change? If not, why? Let's fix that below */
 
   /* Where did the H2's go? See if you can fix that too! */
+
+  article {
+    /* Set width to be 640 pixels */
+    /* Set margin to be auto calculated on the left/right sides */
+  }
 
 }
