--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,11 @@ body {
   /* Set the background color to "lightgrey" */
   /* Set font family to be Helvetica or Arial */
   /* Set line height to be 1.5 times larger than default */  
+  /* Set margin to 0 all the way around */
+}
+
+p {
+  /* Set font color to be the hex code 333333 */
 }
 
 h1 {
@@ -12,10 +17,6 @@ h2 {
   /* Set the font color to be a dark grey, try using a hex (666666) or rgb code! */
 }
 
-p {
-  /* Set font color to be the hex code 333333 */
-}
-
 .faded {
   /* Set opacity of the text to be 0.7 (70%) */
 }
@@ -24,7 +25,7 @@ img {
   /* Set the max width to be 100% of the containing element */
 }
 
-article {
+main {
   /* Set padding to be 0 pixels top & bottom, and 20 pixels left & right */
 }
 
@@ -47,9 +48,13 @@ footer {
 
   /* Where did the H2's go? See if you can fix that too! */
 
-  article {
+  main {
     /* Set width to be 640 pixels */
     /* Set margin to be auto calculated on the left/right sides */
+  }
+  
+  header {
+  /* Set the text alignment to be center */
   }
 
 }
