--- a/css/style.css
+++ b/css/style.css
@@ -1,60 +1,56 @@
 body {
-  /* Set the background color to "lightgrey" */
+  /* Set margin to 0 pixels on all sides */
   /* Set font family to be Helvetica or Arial */
   /* Set line height to be 1.5 times larger than default */  
-  /* Set margin to 0 all the way around */
+}
+
+header {
+  /* Set text alignment to center */
+}
+
+main {
+  /* Set maximum width to be 800 pixels */
+  /* Set margin to be automatically calculated on all sides */
+  /* Set padding to be 0 pixels top & bottom, and 20 pixels left & right */
 }
 
 p {
   /* Set font color to be the hex code 333333 */
 }
 
-h1 {
-  /* Set a border along the bottom to be a black solid line, 5 pixels thick */
-}
-
-h2 {
-  /* Set the font color to be a dark grey, try using a hex (666666) or rgb code! */
-}
-
 .faded {
-  /* Set opacity of the text to be 0.7 (70%) */
+  /* Set opacity of the text to be 0.7 */
 }
 
 img {
-  /* Set the max width to be 100% of the containing element */
+  /* Set max width to be 100% of the containing element */
 }
 
-main {
-  /* Set padding to be 0 pixels top & bottom, and 20 pixels left & right */
+h1 {
+  /* Set border along bottom to be a black solid line 5 pixels thick */
+}
+
+h2 {
+  /* Set font color to be red (BONUS: try using a hex code like #e51b24!) */
 }
 
 footer {
   /* Set font color to white */
   /* Set background color to black */
+  /* Set padding on all sides to be 20 pixels */
   /* Set text alignment to center */
   /* Set margin on top to be 60 pixels */
 }
 
-
-@media (max-width: 700px) {
+@media (max-width: 600px) {
 
   body {
-    /* Set the background color to be a dark grey */
+    /* Set the background color to be red */
     /* Set the font color to be white */
   }
 
   /* Question - did the font color change? If not, why? Let's fix that below */
 
   /* Where did the H2's go? See if you can fix that too! */
-
-  main {
-    /* Set width to be 640 pixels */
-    /* Set margin to be auto calculated on the left/right sides */
-  }
-  
-  header {
-  /* Set the text alignment to be center */
-  }
 
 }
