Update final version for GA

--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,10 @@
 body {
   /* Set margin to 0 pixels on all sides */
-  margin: 0px;
-  /* Set font size to be 20 pixels */
-  font-size: 20px;
-  /* Set line height to be 1.5 times larger than default */
-  line-height: 1.5;
+  margin: 0;
   /* Set font family to be Helvetica or Arial */
-  font-family: Arial, Helvetica;
+  font-family: Helvetica, Arial, sans-serif;
+  /* Set line height to be 1.5 times larger than default */ 
+  line-height: 1.5; 
 }
 
 header {
@@ -24,8 +22,13 @@ main {
 }
 
 p {
-  /* Set font color to be the hex code 666666 */
-  color: #666666;
+  /* Set font color to be the hex code 333333 */
+  color: #333333;
+}
+
+.faded {
+  /* Set opacity of the text to be 0.7 */
+  opacity: 0.7;
 }
 
 img {
@@ -39,8 +42,8 @@ h1 {
 }
 
 h2 {
-  /* Set font color to be purple (try using a hex or rgb code!) */
-  color: purple;
+  /* Set font color to be red (BONUS: try using a hex code like #e51b24!) */
+  color: #e51b24;
 }
 
 footer {
@@ -59,8 +62,14 @@ footer {
 @media (max-width: 600px) {
 
   body {
-    /* Set font size to be 80% of the normal size */
-    font-size: 80%;
+    /* Set the background color to be red */
+    background-color: red;
+    /* Set the font color to be white */
+    color: white;
   }
+
+  /* Question - did the font color change? If not, why? Let's fix that below */
+
+  /* Where did the H2's go? See if you can fix that too! */
 
 }
